@@ -26,17 +26,26 @@ then
 fi
 
 echo "Starting DeviceHive frontend"
-exec java -server -Xmx512m -XX:MaxRAMFraction=1 -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -jar \
--Dcom.devicehive.log.level=${DH_LOG_LEVEL:-INFO} \
--Droot.log.level=${ROOT_LOG_LEVEL:-WARN} \
+java -server -Xms1g -Xmx2g -XX:+UseG1GC -XX:MaxGCPauseMillis=20 -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -jar \
+-Dacks=${DH_ACKS:-1} \
+-Dauto.commit.interval.ms=${DH_AUTO_COMMIT_INTERVAL_MS:-5000} \
+-Dbatch.size=${DH_BATCH_SIZE:-98304} \
+-Dbootstrap.servers=${DH_KAFKA_ADDRESS}:${DH_KAFKA_PORT:-9092} \
+-Dcom.devicehive.log.level=${DH_LOG_LEVEL:-WARN} \
+-Denable.auto.commit=${DH_ENABLE_AUTO_COMMIT:-true} \
+-Dfetch.max.wait.ms=${DH_FETCH_MAX_WAIT_MS:-100} \
+-Dfetch.min.bytes=${DH_FETCH_MIN_BYTES:-1} \
 -Dflyway.enabled=false \
+-Dreplication.factor=${DH_REPLICATION_FACTOR:-1} \
 -Driak.host=${DH_RIAK_HOST} \
 -Driak.port=${DH_RIAK_PORT} \
--Dbootstrap.servers=${DH_KAFKA_ADDRESS}:${DH_KAFKA_PORT:-9092} \
--Dzookeeper.connect=${DH_ZK_ADDRESS}:${DH_ZK_PORT:-2181} \
--Drpc.client.response-consumer.threads=${DH_RPC_CLIENT_RES_CONS_THREADS:-1} \
+-Droot.log.level=${ROOT_LOG_LEVEL:-WARN} \
+-Drpc.client.response-consumer.threads=${DH_RPC_CLIENT_RES_CONS_THREADS:-3} \
 -Dserver.context-path=/api \
 -Dserver.port=8080 \
+-Dzookeeper.connect=${DH_ZK_ADDRESS}:${DH_ZK_PORT:-2181} \
+-Dzookeeper.connectionTimeout=${DH_ZK_CONNECTIONTIMEOUT:-8000} \
+-Dzookeeper.sessionTimeout=${DH_ZK_SESSIONTIMEOUT:-10000} \
 ./devicehive-frontend-${DH_VERSION}-boot.jar &
 PID=$!
 wait $PID
